# NSMP

./: CMakeLists.txt  README.md  proxy_server.cpp  proxy_server_2.cpp  run.sh
matlab/: matlab_proxy.m  process_signal.m  processing_signal.m  subscribe.m
src/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
tests/: server.c
